--- a/hangman.html
+++ b/hangman.html
@@ -42,7 +42,7 @@
           //they have guessed a letter, is it in the word?
           for(var j = 0; j < word.length; j++)
           {
-            if(word[j] === guess && answerArray[j] === "_")
+            if(word[j].toLowerCase() === guess.toLowerCase() && answerArray[j] === "_")
             {
               answerArray[j] = guess;
               remainingLetters--;
